==> peng-zhihui/L-ink_Card/DAP-Link/Firmware/src/source/hic_hal/nuvoton/m48ssidae/usbd_m480.c <==
#include <rl_usb.h>
#include "NuMicro.h"
#define __NO_USB_LIB_C
#include "usb_config.c"
#define HSUSBD_CEPCTL_NAKCLR               ((uint32_t)0x00000000UL)
#define HSUSBD_CEPCTL_STALL                ((uint32_t)0x00000002UL)
#define HSUSBD_CEPCTL_ZEROLEN              ((uint32_t)0x00000004UL)
#define HSUSBD_CEPCTL_FLUSH                ((uint32_t)0x00000008UL)
#define HSUSBD_EP_RSPCTL_FLUSH             ((uint32_t)0x00000001UL)
#define HSUSBD_EP_RSPCTL_MODE_AUTO         ((uint32_t)0x00000000UL)
#define HSUSBD_EP_RSPCTL_MODE_MANUAL       ((uint32_t)0x00000002UL)
#define HSUSBD_EP_RSPCTL_MODE_FLY          ((uint32_t)0x00000004UL)
#define HSUSBD_EP_RSPCTL_MODE_MASK         ((uint32_t)0x00000006UL)
#define HSUSBD_EP_RSPCTL_TOGGLE            ((uint32_t)0x00000008UL)
#define HSUSBD_EP_RSPCTL_HALT              ((uint32_t)0x00000010UL)
#define HSUSBD_EP_RSPCTL_ZEROLEN           ((uint32_t)0x00000020UL)
#define HSUSBD_EP_RSPCTL_SHORTTXEN         ((uint32_t)0x00000040UL)
#define HSUSBD_EP_RSPCTL_DISBUF            ((uint32_t)0x00000080UL)
#define HSUSBD_EP_CFG_VALID                ((uint32_t)0x00000001UL)
#define HSUSBD_EP_CFG_TYPE_BULK            ((uint32_t)0x00000002UL)
#define HSUSBD_EP_CFG_TYPE_INT             ((uint32_t)0x00000004UL)
#define HSUSBD_EP_CFG_TYPE_ISO             ((uint32_t)0x00000006UL)
#define HSUSBD_EP_CFG_TYPE_MASK            ((uint32_t)0x00000006UL)
#define HSUSBD_EP_CFG_DIR_OUT              ((uint32_t)0x00000000UL)

void USBD_Init(void)
{
    uint32_t volatile i;
    /* Initial USB engine */
    HSUSBD_ENABLE_PHY();

    /* wait PHY clock ready */
    while (1) {
        HSUSBD->EP[EPA].EPMPS = 0x20UL;

        if (HSUSBD->EP[EPA].EPMPS == 0x20UL) {
            break;
        }
    }

    for (i = 0; i < 0x10000; i++);

    if (HSUSBD->OPER & HSUSBD_OPER_CURSPD_Msk) {
        USBD_HighSpeed = __TRUE;
    } else {
        USBD_HighSpeed = __FALSE;
    }

    /* Enable USB BUS, CEP global interrupt */
    HSUSBD_ENABLE_USB_INT(HSUSBD_GINTEN_USBIEN_Msk | HSUSBD_GINTEN_CEPIEN_Msk);
    /* Enable BUS interrupt */
    HSUSBD_ENABLE_BUS_INT(HSUSBD_BUSINTEN_RESUMEIEN_Msk | HSUSBD_BUSINTEN_RSTIEN_Msk | HSUSBD_BUSINTEN_VBUSDETIEN_Msk | HSUSBD_BUSINTEN_SOFIEN_Msk);
    /* Reset Address to 0 */
    HSUSBD_SET_ADDR(0);
    /* Control endpoint */
    HSUSBD->CEPBUFST = CEP_BUF_BASE;
    HSUSBD->CEPBUFEND = CEP_BUF_BASE + CEP_BUF_LEN - 1UL;
    HSUSBD_ENABLE_CEP_INT(HSUSBD_CEPINTEN_SETUPPKIEN_Msk | HSUSBD_CEPINTEN_STSDONEIEN_Msk | HSUSBD_CEPINTEN_RXPKIEN_Msk | HSUSBD_CEPINTEN_TXPKIEN_Msk);
    USBD_IntrEna();
}

void USBD_Connect(BOOL con)
{
    if (con) {
        HSUSBD_CLR_SE0();
    } else {
        HSUSBD_SET_SE0();
    }
}

void USBD_Reset(void)
{
    uint32_t i;

    for (i = 0; i < HSUSBD_MAX_EP; i++) {
        HSUSBD->EP[EPA + i].EPRSPCTL = HSUSBD_EPRSPCTL_FLUSH_Msk;
    }

    if (HSUSBD->OPER & HSUSBD_OPER_CURSPD_Msk) {
        USBD_HighSpeed = __TRUE;
    } else {
        USBD_HighSpeed = __FALSE;
    }

    g_u32FreeBufAddr = CEP_BUF_BASE + CEP_BUF_LEN;
    g_u8StatusIn = 0;
    HSUSBD_SET_ADDR(0);
}

void USBD_ConfigEP(USB_ENDPOINT_DESCRIPTOR *pEPD)
{
    uint32_t u32Num, u32Ep, u32Size, u32Type, u32Dir;
    u32Num = pEPD->bEndpointAddress & 0x0F;
    u32Ep = USBD_NUM_TO_EP(u32Num);
    u32Size = pEPD->wMaxPacketSize;

    switch (pEPD->bmAttributes & USB_ENDPOINT_TYPE_MASK) {
        case USB_ENDPOINT_TYPE_ISOCHRONOUS:
            u32Type = HSUSBD_EP_CFG_TYPE_ISO;
            break;

        case USB_ENDPOINT_TYPE_BULK:
            u32Type = HSUSBD_EP_CFG_TYPE_BULK;
            break;

        case USB_ENDPOINT_TYPE_INTERRUPT:
            u32Type = HSUSBD_EP_CFG_TYPE_INT;
            break;
    }

    if (pEPD->bEndpointAddress & USB_ENDPOINT_DIRECTION_MASK) {
        u32Dir = HSUSBD_EP_CFG_DIR_IN;
    } else {
        u32Dir = HSUSBD_EP_CFG_DIR_OUT;
    }

    HSUSBD->EP[u32Ep].EPBUFST = g_u32FreeBufAddr;
    HSUSBD->EP[u32Ep].EPBUFEND = g_u32FreeBufAddr + u32Size - 1UL;
    HSUSBD_SET_MAX_PAYLOAD(u32Ep, u32Size);
    HSUSBD->EP[u32Ep].EPRSPCTL = (HSUSBD_EP_RSPCTL_FLUSH | HSUSBD_EP_RSPCTL_MODE_AUTO);
    HSUSBD->EP[u32Ep].EPCFG = (u32Type | u32Dir | HSUSBD_EP_CFG_VALID | (u32Num << 4));
    g_u32FreeBufAddr += u32Size;
}

void USBD_EnableEP(U32 EPNum)
{
    uint32_t u32Ep, u32Num, u32Intr;
    u32Num = EPNum & 0x0F;
    u32Ep = USBD_NUM_TO_EP(u32Num);
    HSUSBD->GINTEN |= (0x1UL << (HSUSBD_GINTEN_EPAIEN_Pos + (u32Num - USBD_EP_TO_NUM(EPA))));

    if (EPNum & 0x80) {
        u32Intr = HSUSBD_EPINTEN_TXPKIEN_Msk;
    } else {
        u32Intr = HSUSBD_EPINTEN_RXPKIEN_Msk | HSUSBD_EPINTEN_SHORTRXIEN_Msk | HSUSBD_EPINTEN_BUFFULLIEN_Msk;
    }

    HSUSBD_ENABLE_EP_INT(u32Ep, u32Intr);
}

void USBD_DisableEP(U32 EPNum)
{
    uint32_t u32Ep, u32Num;
    u32Num = EPNum & 0x0F;
    u32Ep = USBD_NUM_TO_EP(u32Num);
    HSUSBD->GINTEN &= ~(0x1UL << (HSUSBD_GINTEN_EPAIEN_Pos + (u32Num - USBD_EP_TO_NUM(EPA))));
    HSUSBD_ENABLE_EP_INT(u32Ep, 0);
}

void USBD_ResetEP(U32 EPNum)
{
    uint32_t u32Ep, u32Num;
    u32Num = EPNum & 0x0F;
    u32Ep = USBD_NUM_TO_EP(u32Num);
    HSUSBD->EP[u32Ep].EPRSPCTL = (HSUSBD->EP[u32Ep].EPRSPCTL & HSUSBD_EP_RSPCTL_MODE_MASK) | HSUSBD_EPRSPCTL_FLUSH_Msk;
}

void USBD_SetStallEP(U32 EPNum)
{
    uint32_t u32Ep, u32Num;
    u32Num = EPNum & 0x0F;
    u32Ep = USBD_NUM_TO_EP(u32Num);

    if (u32Ep == CEP) {
        HSUSBD_SET_CEP_STATE(HSUSBD_CEPCTL_STALL);
    } else {
        HSUSBD->EP[u32Ep].EPRSPCTL = (HSUSBD->EP[u32Ep].EPRSPCTL & 0xF7UL) | HSUSBD_EP_RSPCTL_HALT;
    }
}

void USBD_ClrStallEP(U32 EPNum)
{
    uint32_t u32Ep, u32Num;
    u32Num = EPNum & 0x0F;
    u32Ep = USBD_NUM_TO_EP(u32Num);

    if (u32Ep == CEP) {
        HSUSBD_SET_CEP_STATE(HSUSBD_CEPCTL_NAKCLR_Msk);
    } else {
        HSUSBD->EP[u32Ep].EPRSPCTL = (HSUSBD->EP[u32Ep].EPRSPCTL & HSUSBD_EP_RSPCTL_MODE_MASK) | HSUSBD_EP_RSPCTL_TOGGLE;
    }
}

U32 USBD_ReadEP(U32 EPNum, U8 *pData, U32 bufsz)
{
    uint32_t u32Ep, u32Num, u32Len, i;
    u32Num = EPNum & 0x0F;
    u32Ep = USBD_NUM_TO_EP(u32Num);

    if (u32Num == 0) {
        if (pData == (uint8_t *)&USBD_SetupPacket) {
            *((uint16_t *)(pData + 0)) = (uint16_t)(HSUSBD->SETUP1_0 & 0xFFFFUL);
            *((uint16_t *)(pData + 2)) = (uint16_t)(HSUSBD->SETUP3_2 & 0xFFFFUL);
            *((uint16_t *)(pData + 4)) = (uint16_t)(HSUSBD->SETUP5_4 & 0xFFFFUL);
            *((uint16_t *)(pData + 6)) = (uint16_t)(HSUSBD->SETUP7_6 & 0xFFFFUL);
            return 8;
        } else {
            u32Len = HSUSBD->CEPDATCNT & 0xFFFFUL;

            if (u32Len > bufsz) {
                u32Len = bufsz;
            }

            for (i = 0; i < bufsz; i++) {
                pData[i] = inpb(&HSUSBD->CEPDAT);
            }

            return u32Len;
        }
    } else {
        u32Len = HSUSBD->EP[u32Ep].EPDATCNT & 0xFFFFUL;

        if (u32Len > bufsz) {
            u32Len = bufsz;
        }

        for (i = 0; i < u32Len; i++) {
            pData[i] = HSUSBD->EP[u32Ep].EPDAT_BYTE;
        }

        return u32Len;
    }
}

U32 USBD_WriteEP(U32 EPNum, U8 *pData, U32 cnt)
{
    uint32_t u32Ep, u32Num, i;
    u32Num = EPNum & 0x0F;
    u32Ep = USBD_NUM_TO_EP(u32Num);

    if (u32Num == 0) {
        if (pData != NULL) {
            if (cnt > 0) {
                for (i = 0; i < cnt; i++) {
                    HSUSBD->CEPDAT_BYTE = pData[i];
                }

                HSUSBD_START_CEP_IN(cnt);
            } else {
                HSUSBD_SET_CEP_STATE(HSUSBD_CEPCTL_ZEROLEN);
            }
        } else if (cnt == 0) {
            g_u8StatusIn = 1;
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_STSDONEIF_Msk);
            HSUSBD_SET_CEP_STATE(HSUSBD_CEPCTL_NAKCLR);
        }

        return cnt;
    } else {
        if (cnt > 0) {
            for (i = 0; i < cnt; i++) {
                HSUSBD->EP[u32Ep].EPDAT_BYTE = pData[i];
            }

            HSUSBD->EP[u32Ep].EPRSPCTL = (HSUSBD->EP[u32Ep].EPRSPCTL & HSUSBD_EP_RSPCTL_HALT) | HSUSBD_EP_RSPCTL_SHORTTXEN;
        } else {
            HSUSBD->EP[u32Ep].EPRSPCTL = (HSUSBD->EP[u32Ep].EPRSPCTL & HSUSBD_EP_RSPCTL_HALT) | HSUSBD_EP_RSPCTL_ZEROLEN;
        }

        return cnt;
    }
}

void USBD_Handler(void)
{
    USBD_Handler_Main();
    NVIC_EnableIRQ(USBD20_IRQn);
}
